--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,6 +19,7 @@ jobs:
           echo "PR never closed during execution"
   post-check:
     runs-on: ubuntu-latest
+    needs: [watch-pr]
     if: github.event.pull_request.merged == false
     steps:
       - name: hola
