--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           echo "Watching PR #$PR_NUMBER"
           echo "PR never closed during execution"
+          sleep 500
   post-check:
     runs-on: ubuntu-latest
     needs: [watch-pr]
