--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,12 +2,12 @@ name: PR watcher
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened,closed]
 
 jobs:
   watch-pr:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == false
+    if: github.event.pull_request.state == 'open'
     steps:
       - name: Check PR status in a loop
         env:
@@ -21,7 +21,7 @@ jobs:
   post-check:
     runs-on: ubuntu-latest
     needs: [watch-pr]
-    if: github.event.pull_request.merged == false
+    if: github.event.pull_request.state == 'open'
     steps:
       - name: hola
         run: |
